--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,10 @@ language: scala
 
 scala:
   - 2.12.6
-  - 2.11.12
+  - 2.13.0
 
 jdk:
-  - oraclejdk7
-  - oraclejdk8
-
-# inspired by https://github.com/hashicorp/nomad-scala-sdk/blob/master/.travis.yml
-matrix:
-  exclude:
-  # We build Scala 2.11 on Java 7, so let's not bother with Java 8
-  - jdk: oraclejdk8
-    scala: 2.11.12
+  - openjdk8
 
 services:
   - rabbitmq
