--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ jdk:
   - openjdk8
 
 scala:
-  - 2.12.10
-  - 2.13.1
+  - 2.12.11
+  - 2.13.2
 
 cache:
   directories:
   - $HOME/.sbt
   - $HOME/.ivy2/cache
+  - $HOME/.cache/coursier
